--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon src/server.js"
+    "server": "nodemon src/server.js"
   },
   "author": "Varun",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "beepbeep": "^1.3.0",
+    "beeper": "^3.0.0",
+    "chalk": "^4.1.1",
     "express": "^4.17.1",
     "inquirer": "^8.0.0"
   }
